--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <meta charset="utf-8">
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <h1>D3 Playground</h1>
+    <div id="display"></div>
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.js"
+      integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+      crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tipsy/1.0.3/jquery.tipsy.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+
+    <!-- Table -->
+    <script>
+      console.log('hello world')
+    </script>
   </body>
 </html>
